--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.port=8085
 spring.jpa.hibernate.ddl-auto =update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2008Dialect
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 
 spring.liquibase.change-log=classpath:db/liquibase-outputChangeLogInsert.xml
 spring.liquibase.enabled=false
